[gd_scene load_steps=4 format=2]

[ext_resource path="res://prefabs/Enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/square.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.4, 4.4 )

[node name="Enemy" type="Sprite"]
modulate = Color( 0.901961, 0.286275, 0.286275, 1 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Hitbox" type="Area2D" parent="." groups=["enemy"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
visible = false
position = Vector2( 1.90735e-07, -1.90735e-07 )
scale = Vector2( 1, 1 )
shape = SubResource( 1 )

[node name="StunTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.125

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="StunTimer" to="." method="_on_stun_timeout"]
